--- a/package.json
+++ b/package.json
@@ -13,9 +13,27 @@
     "pages:dev": "npx wrangler pages dev .vercel/output/static --compatibility-date=2023-11-21 --compatibility-flag=nodejs_compat"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.0.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@types/iframe-resizer": "^3.5.13",
+    "@types/pusher-js": "^5.1.0",
+    "clsx": "^2.0.0",
+    "formik": "^2.4.5",
+    "iframe-resizer": "^4.3.9",
+    "jose": "^5.1.3",
+    "moment": "^2.29.4",
     "next": "14.0.3",
+    "node-html-parser": "^6.1.11",
+    "pusher": "^5.2.0",
+    "pusher-client": "^1.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-confetti": "^6.1.0",
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-use": "^17.4.3",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.8.0",
@@ -27,6 +45,7 @@
     "eslint-config-next": "14.0.3",
     "eslint-plugin-next-on-pages": "^1.8.0",
     "postcss": "^8",
+    "tailwind-merge": "^2.1.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
     "vercel": "^32.6.1"
